added course 3, 4, 5 content

--- a/templates/course3.html
+++ b/templates/course3.html
@@ -2,16 +2,136 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 3</p>
-<p>Здесь отображается общая часть для всех</p>
+<h4>Числовые типы данных</h4>
+<table class="table-striped" width="100%">
+    <thead>
+        <tr>
+            <th scope="col">Функция</th>
+            <th scope="col">Назначение</th>
+            <th scope="col">Тип аргумента</th>
+            <th scope="col">Тип результата</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>abs(x)</td>
+            <td>Абсолютная величина (модуль) числа x</td>
+            <td>int, float</td>
+            <td>Такой же, как у аргумента</td>
+        </tr>
+        <tr>
+            <td>round(x)</td>
+            <td>Округление вещественного x до заданного количества знаков после запятой (по умолчанию - до нуля знаков, т.е. до ближайшего целого)</td>
+            <td>float</td>
+            <td>int, float</td>
+        </tr>
+        <tr>
+            <td>int(x)</td>
+            <td>Преобразование вещественного или строкового x к целому</td>
+            <td>str, float</td>
+            <td>int</td>
+        </tr>
+        <tr>
+            <td>sqrt(x)</td>
+            <td>Квадратный корень из x</td>
+            <td>int, float</td>
+            <td>float</td>
+        </tr>
+        <tr>
+            <td>sin(x)</td>
+            <td>Синус угла x, заданного в радианах</td>
+            <td>int, float</td>
+            <td>float</td>
+        </tr>
+        <tr>
+            <td>random()</td>
+            <td>Случайное число от 0 до 1</td>
+            <td>-</td>
+            <td>float</td>
+        </tr>
+        <tr>
+            <td>randint(a,b)</td>
+            <td>Случайное целое число n, а &lt;= n &lt;= b</td>
+            <td>int</td>
+            <td>int</td>
+        </tr>
+    </tbody>
+</table>
 
-{% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+<p>Первые три из представленных в таблице функций встроены в язык Python, чтобы их вызвать, не надо выполнять никаких
+    дополнительных действий. </p>
+<p>Например, программа ввода вещественного числа и вывода его абсолютной величины может выглядеть так: x = float(input
+    ()) print(abs (x) )</p>
+<p>Что касается функций sqrt(x) и sin(x), то для их вызова предварительно надо подключить модуль math, в котором собраны
+    математические функции.</p>
+<p>Подключение модуля осуществляется командой import. Например, команда from math import * подключает к программе все
+    функции (так как стоит знак * ) модуля math. После этого к ним можно будет обращаться так же, как к встроенным
+    функциям: y = sqrt(x) z = sin(x) </p>
+<p>Для того, чтобы записать в переменную a случайное число в диапазоне от 1 до 10, можно использовать следующие
+    операторы:</p>
+<pre>
+    <code>
+        from random import randint # Подключаем функцию randint() модуля random 
+        a = randint(1, 10) # Обращаемся к функции randint() как к встроенной       
+    </code>
+</pre>
+<h4>Целочисленный тип данных</h4>
+<p>Над целыми числами в языке Python можно выполнять следующие операции:</p>
+<ul>
+    <li>сложение (+); </li>
+    <li>вычитание (—);</li>
+    <li>умножение (*);</li>
+    <li>целочисленное деление или получение неполного частного (//);</li>
+    <li>взятие остатка или получение остатка от деления (%);</li>
+    <li>деление (/);</li>
+    <li>возведение в степень (**).</li>
+</ul>
+
+<p>Результаты первых пяти операций — целые числа. Результатом операции деления может быть вещественное число. </p>
+<p>Рассмотрим пример использования операций // и %, записав на языке Python программу нахождения суммы цифр вводимого с
+    клавиатуры натурального трёхзначного числа. Используем тот факт, что положительное трёхзначное число можно
+    представить в виде следующей суммы:
+    <br>x = a*100 + b * 10 + c, где a, b, c — цифры числа.
+</p>
+
+<h4>Строковый тип данных</h4>
+<p>Значением строковой величины (тип str) является произвольная последовательность символов, заключенная в одинарные или
+    двойные кавычки. Символьная строка рассматривается как единый объект.</p>
+<p>В тексте программы переменную строкового типа можно задать, заключив цепочку символов в одинарные или двойные
+    кавычки:</p>
+<pre>
+    <code>
+        d = ' 5 '
+        c = 'Book'
+        c1 = "1*"
+    </code>
+</pre>
+
+<p>Встроенная функция len() определяет длину строки — количество символов в ней: n = len(s)
+<p>Можно проверить равенство (совпадение) строк (d == c) или выяснить, какая из двух строк меньше (при этом используется
+    поочерёдное сравнение кодов
+    символов, образующих слова; меньшим будет то слово, у которого код очередного символа окажется меньше).</p>
+<p>В Python (как и в алгоритмическом языке) строки можно сцеплять: a + b (к концу строки a прикрепляется
+    («приписывается»)
+    строка b).</p>
+<p>Пусть d = c1 + d + c1 Тогда в переменную d будет записана следующая строка: '1*51*' .</p>
+<p>В результате операции a * k, где k — целое число, строка a повторяется k раз.
+    Так, в результате выполнения команды print(d * 3) будет выведена строка: 1*51*1*51*1*51*</p>
+
+<h4>Логический тип данных</h4>
+<p>Как известно, величины логического типа принимают всего два значения; в Python это False и True. Эти константы
+    определены так, что False &lt; True. Пусть ans — логическая переменная, а N — переменная целого типа. Тогда в
+    результате выполнения оператора присваивания ans = N % 2 == 0 переменной ans будет присвоено значение True при любом
+    чётном N и
+    False в противном случае. </p>
+<p>Логическим переменным также можно присваивать значения логических выражений, построенных с
+    помощью известных вам логических операций И, ИЛИ, НЕ, которые в Python обозначаются соответственно and, or, not.</p>
+
+{% if not session.get("role") %} <p>Ничего не отображается</p>
 {% elif session.get("role") == 'Учащийся' %}
-    <p>Здесь отображается только часть для учащегося</p>
+<p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
 
 {% endblock %}
