--- a/templates/course4.html
+++ b/templates/course4.html
@@ -2,16 +2,38 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 4</p>
-<p>Здесь отображается общая часть для всех</p>
+<h4>Условный оператор</h4>
+<p>При записи на языке Python разветвляющихся алгоритмов используют условный оператор.</p>
+<p>Его общий вид: if : else:</p>
+<p>В качестве условий используются логические выражения:</p>
+<ul>
+    <li>простые — записанные с помощью операций отношения (, &gt;=, &lt;=, != (не равно), == (равно));</li>
+    <li>составные — записанные с помощью логических операций (and, or, not).</li>
+</ul>
+<p>В языке Python разрешены двойные неравенства, например А &lt; В &lt; С.</p>
+
+<h4>Многообразие способов записи ветвлений</h4>
+<p>Внутри условного оператора могут находиться любые операторы, в том числе и другие условные операторы. Условные
+    операторы, находящиеся внутри блоков, следующих после if («если») или else («иначе»), называются вложенными
+    условными операторами</p>
+<pre>
+    <code>
+        if: 
+        else:
+            if: 
+            else:        
+    </code>
+</pre>
+<p>Если после else сразу следует ещё один оператор if, можно использовать так называемое «каскадное» ветвление с
+    ключевыми словами elif (сокращение от else-if).</p>
+
 
 {% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+<p>Ничего не отображается</p>
 {% elif session.get("role") == 'Учащийся' %}
-    <p>Здесь отображается только часть для учащегося</p>
+<p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
 
 {% endblock %}
