--- a/templates/course5.html
+++ b/templates/course5.html
@@ -2,16 +2,61 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 5</p>
-<p>Здесь отображается общая часть для всех</p>
+<h4>Программирование циклов с известным условием продолжения работы</h4>
+<p>В языке Python цикл с заданным условием продолжения работы записывается с помощью оператора while. Общий вид
+    оператора:</p>
+<pre>
+    <code>
+        while &lt;условие&gt;:
+            &lt;операторы&gt;
+    </code>
+</pre>
+<p>&lt;условие&gt; — логическое выражение, условие продолжения работы цикла; пока оно истинно, выполняется тело цикла;
+    если условие ложно с самого начала, тело цикла не выполнится ни разу;</p>
+<p>&lt;операторы&gt; — один или несколько операторов, с помощью которых записано тело цикла. </p>
+
+<h4>Программирование циклов с известным условием окончания работы</h4>
+<p>В языке Python нет специального оператора для записи циклов с заданным условием окончания работы, но его можно
+    организовать с помощью цикла while:</p>
+<pre>
+    <code>
+        while True: 
+            &lt;операторы&gt;
+            if &lt;условие&gt;: break         
+    </code>
+</pre>
+<p> Цикл while True: будет выполняться бесконечно, потому что условие True всегда истинно. Выйти из такого цикла можно
+    только с помощью специального оператора break.</p>
+<h4>Программирование циклов с известным числом повторений</h4>
+<p>Цикл с известным числом повторений в языке Python записывается с помощью оператора for (в переводе с английского —
+    «для»). Его общий вид:</p>
+<pre>
+    <code>
+        for &lt;параметр&gt; in range(k, n, m):
+            &lt;операторы&gt; 
+    </code>
+</pre>
+
+
+<p>&lt;операторы&gt; — переменная целого типа; </p>
+<p>range () — функция, описывающая необходимое количество повторов тела цикла; в скобках может быть указано от одного до
+    трёх чисел:</p>
+<ul>
+    <li>одно число (n) указывает на то, что нужно последовательно перебрать все целые числа от 0 до n - 1;</li>
+    <li>два числа (k, n) говорят о том, что нужно последовательно перебрать все целые числа, находящиеся в диапазоне от
+        k (начальное значение) до n - 1 (конечное значение); </li>
+    <li>три числа (k, n, m) указывают на то, что параметр должен изменяться от k до n - 1 с шагом, равным m;</li>
+</ul>
+<p>При выполнении цикла for с тремя параметрами после каждого выполнения тела цикла происходит увеличение параметра
+    цикла на шаг m. Если k = n или k &gt; n, цикл не выполнится ни разу.</p>
+
 
 {% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+<p>Ничего не отображается</p>
 {% elif session.get("role") == 'Учащийся' %}
-    <p>Здесь отображается только часть для учащегося</p>
+<p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
 
 {% endblock %}
