--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,17 +38,27 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/course3">
-                  Курс 3
+                  Линейные алгоритмы
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/course4">
-                  Курс 4
+                  Разветвляющиеся алгоритмы
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/course5">
-                  Курс 5
+                  Циклические алгоритмы
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course6">
+                  Одномерные массивы целых чисел
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course7">
+                  Запись вспомогательных алгоритмов
                 </a>
               </li>
               {% endif %}
