added course 6 content

--- a/templates/course6.html
+++ b/templates/course6.html
@@ -2,16 +2,187 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 5</p>
-<p>Здесь отображается общая часть для всех</p>
+<p>Массив — это совокупность фиксированного количества однотипных элементов, которым присвоено общее имя. Доступ к
+    отдельному элементу массива осуществляется по его номеру (индексу).</p>
+<p>Размерность массива — это количество индексов, необходимое для однозначного доступа к элементу массива. Массивы с
+    одним индексом называют одномерными, с двумя — двумерными и т. д. Мы будем рассматривать одномерные массивы.</p>
+<p>В языке Python нет такой структуры данных, как «массив»; для хранения группы однотипных объектов используют списки —
+    объекты типа list. Далее, говоря о списках, мы будем использовать слово «массив».</p>
+
+<h4>Обращение к элементу массива</h4>
+<p>Нумерация элементов массивов в Python всегда начинается с нуля. Для того чтобы обратиться к элементу массива,
+    записывают имя массива, а после него в квадратных скобках указывают индекс нужного элемента.</p>
+
+<p>А — имя массива; А[0] = 1 (значение элемента массива А с индексом 0 равно 1), А[1] = 2, А[2] = -3, А[3] = 5, А[4] =
+    7.</p>
+<p>Индексом может быть не только целое число, но и целое значение переменной или арифметического выражения. Так, в нашем
+    примере А[4 * i - 2] = -3 при i = 1.</p>
+<p>Индексом может быть даже значение элемента массива. В нашем примере А [А [1 ] ] = -3. При обращении к элементу
+    массива с несуществующим индексом происходит серьёзная ошибка — выход за границы массива — и программа завершается
+    аварийно.</p>
+<p>Длина массива (количество элементов массива) определяется с помощью функции len(): N = len(A) .</p>
+<p>5 — длина массива. Иногда размер массива хранят в отдельной переменной: N = 5. Перед использованием в программе
+    массив необходимо создать, в противном случае обращение к несуществующему элементу вызовет ошибку и аварийное
+    завершение программы.</p>
+
+<h4>Заполнение массива</h4>
+<p>Перечисление значений элементов. Массив можно создать перечислением элементов через запятую в квадратных скобках,
+    например, так: <code>A = [1, 2, -3, 5, 7]</code></p>
+<p>С помощью записи <code>D = [1] * 5</code> будет создан массив из пяти элементов, каждый из которых равен 1. </p>
+
+<p>Ввод значений элементов с клавиатуры. Небольшие массивы можно вводить с клавиатуры. Для этого можно использовать цикл
+    с параметром, выполняющий оператор ввода отдельно для каждого элемента массива:</p>
+<pre>
+    <code>
+        for i in range(N):
+        A[i] = int(input()) 
+    </code>
+</pre>
+<p>При каждом повторении цикла строка, введённая пользователем, преобразуется в целое число с помощью функции int () , и
+    это число добавляется в массив. Пользователь сам должен следить за тем, значение какого именно элемента он вводит в
+    тот или иной момент.</p>
+
+<p>Заполнение массива случайными числами. Для работы со случайными числами сначала нужно подключить функцию randint ()
+    модуля random () , генерирующую случайное целое число в заданном диапазоне:</p>
+<code>from random import randint</code></p>
+<p>Далее можно использовать цикл с параметром. Массив из N элементов будет заполнен случайными числами, принадлежащими
+    отрезку [10, 110]:</p>
+<pre>
+    <code>
+        for i in range(N): 
+            A[i] = randint(10, 110)
+    </code>
+</pre>
+
+<p>Задание значений элементов массива по формуле. Программа заполняет массив целыми числами от 0 до N-1:</p>
+<pre>
+    <code>
+        for i in range(N): 
+            A[i] = i 
+    </code>
+</pre>
+<p>Программа заполняет элементы массива числами, равными квадратам их индексов:</p>
+<pre>
+    <code>
+        for i in range(N): 
+            A[i] = i ** 2
+    </code>
+</pre>
+
+<h4>Вывод массива</h4>
+<p>Во многих случаях бывает полезно вывести значения элементов массива на экран. Так, если значения массива
+    генерировались случайным образом, то необходимо знать, какими именно значениями заполнен исходный массив. Также
+    нужно видеть, как изменились значения элементов массив после обработки. </p>
+<p>Самый простой способ — вывести список как один объект: <code>print(A)</code></p>
+<p>В этом случае весь массив выводится в квадратных скобках, а его элементы разделяются запятыми.</p>
+<p>Можно вывести элементы массива на экран по одному, используя цикл:</p>
+<pre>
+    <code>
+        for i in range(len(A)): 
+        print(A[i], end=" " )
+    </code>
+</pre>
+<p>Параметр end определяет, что после вывода каждого элемента добавляется пробел, а не символ перехода на новую строку.
+    Значения элементов массива можно вывести в столбик:</p>
+<pre>
+    <code>
+        for i in range(len(A)): 
+        print(A[i])        
+    </code>
+</pre>
+
+<h4>Последовательный поиск в массиве</h4>
+<p>В программировании поиск — одна из наиболее часто встречающихся задач невычислительного характера. Можно выделить
+    следующие типовые задачи поиска: </p>
+<ol>
+    <li>найти наибольший (наименьший) элемент массива; </li>
+    <li>найти элемент массива, значение которого равно заданному значению.</li>
+</ol>
+<p>Для решения таких задач в программе необходимо организовать последовательный просмотр элементов массива и сравнение
+    значения очередного просматриваемого элемента с неким образцом.</p>
+<p>Так как доступ к значению элемента массива осуществляется по его индексу, то при организации поиска наибольшего
+    элемента в одномерном массиве можно запоминать (хранить) его индекс. Обозначим искомый индекс imax. Тогда описанный
+    выше алгоритм в сформированном нами массиве A на языке Python можно записать так:</p>
+<pre>
+    <code>
+        # Задание массива
+        N = 10
+        A = [0] * N 
+        # Подключение генератора случайных чисел
+        from random import randint
+        # Заполнение и вывод массива
+        for i in range(N):
+            A[i] = randint(0, 99)
+            print ('A[', i, ']= ', A[i])
+        # Поиск индекса наибольшего элемента        
+        imax = 0
+        for i in range(1,N):
+            if A[i] &gt; A[imax]: imax = i
+        # Вывод результата
+        print('Наибольший элемент: ', A[imax])
+    </code>
+</pre>
+
+<p>Результатом решения задачи второго типа (нахождение элемента массива, значение которого равно заданному значению) может быть: </p>
+<ul>
+    <li>k — индекс элемента массива такой, что A[k] = x, где x — заданное число; </li>
+    <li>сообщение о том, что искомого элемента в массиве не обнаружено. Программа поиска в сформированном нами массиве A значения, равного x, может выглядеть так:</li>
+</ul>
+<pre>
+    <code>
+        # Задание массива
+        N = 10 :
+        A = [0] * N :
+        # Подключение генератора случайных чисел
+        from random import randint
+        # Заполнение и вывод массива
+        for i in range(N):
+            A[i] = randint (0, 99)
+            print('A[', i, '] = ', A[i])
+        # Ввод значения x
+        x = int(input('x='))
+        # Поиск индекса элемента, равного x
+        nx = -1
+        for i in range (0, N):
+            if A[i]== x: nx = i
+        # Вывод результата
+        if nx == -1:
+            print('Элемента со значением, равным ', x, ' нет ' )
+        else:
+            print('Индекс элемента, равного заданному, ', nx) ;
+    </code>
+</pre>
+
+<p>В этой программе последовательно просматриваются все элементы массива. Номер найденного элемента сохраняется в переменной nx. Если в массиве есть несколько элементов, значения которых равны заданному числу, то программа найдёт последний из них. Если значение переменной nx не изменилось в ходе выполнения цикла и осталось равным -1, то это означает, что в массиве нет элемента, равного x.</p>
+
+<h4>Сортировка массива</h4>
+<p>Под сортировкой (упорядочением) массива понимают перераспределение значений его элементов в некотором определённом порядке. Порядок, при котором в массиве первый элемент имеет самое маленькое значение, а значение каждого следующего элемента не меньше значения предыдущего элемента, называют неубывающим. Порядок, при котором в массиве первый элемент имеет самое большое значение, а значение каждого следующего элемента не больше значения предыдущего элемента, называют невозрастающим. Цель сортировки — облегчить последующий поиск элементов: искать нужный элемент в упорядоченном массиве легче. Рассмотрим один из возможных алгоритмов сортировки массивов — сортировку выбором. Сортировка выбором (например, по невозрастанию) осуществляется следующим образом:</p>
+<ol>
+    <li> в массиве выбирается максимальный элемент; </li>
+    <li>максимальный и первый элементы меняются местами; первый элемент считается отсортированным; </li>
+    <li>в неотсортированной части массива снова выбирается максимальный элемент; он меняется местами с первым неотсортированным элементом массива;</li>
+    <li>действия, описанные в п. 3, повторяются с неотсортированными элементами массива до тех пор, пока не останется один неотсортированный элемент (его значение будет минимальным).</li>
+</ol>
+<p>Рассмотрим процесс сортировки выбором на примере массива А = [0, 1, 9, 2, 4, 3, 6, 5].</p>
+<p>Приведём фрагмент программы, реализующий описанный алгоритм:</p>
+<pre>
+    <code>
+        for i in range(n - 1): 
+            imax = i 
+            for j in range(i +1, n): 
+                if A[j] > A[imax]: imax = j 
+        A[i], A[imax] = A[imax], A[i]
+    </code>
+</pre>
+<p>Здесь мы использовали один цикл внутри другого. Такая конструкция называется вложенным циклом.</p>
+
 
 {% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+<p>Ничего не отображается</p>
 {% elif session.get("role") == 'Учащийся' %}
-    <p>Здесь отображается только часть для учащегося</p>
+<p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
 
 {% endblock %}
