added course 7 content

--- a/templates/course4.html
+++ b/templates/course4.html
@@ -4,7 +4,7 @@
 
 <h4>Условный оператор</h4>
 <p>При записи на языке Python разветвляющихся алгоритмов используют условный оператор.</p>
-<p>Его общий вид: if : else:</p>
+<p>Его общий вид: if &lt;условие&gt;: &lt;операторы&gt; else: &lt;операторы&gt;</p>
 <p>В качестве условий используются логические выражения:</p>
 <ul>
     <li>простые — записанные с помощью операций отношения (, &gt;=, &lt;=, != (не равно), == (равно));</li>
@@ -18,10 +18,13 @@
     условными операторами</p>
 <pre>
     <code>
-        if: 
+        if &lt;условие&gt;:
+            &lt;операторы&gt;  
         else:
-            if: 
+            if &lt;условие&gt;: 
+                &lt;операторы&gt; 
             else:        
+                &lt;операторы&gt; 
     </code>
 </pre>
 <p>Если после else сразу следует ещё один оператор if, можно использовать так называемое «каскадное» ветвление с
