--- a/templates/course7.html
+++ b/templates/course7.html
@@ -2,9 +2,70 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 5</p>
-<p>Здесь отображается общая часть для всех</p>
+<p>Запись вспомогательных алгоритмов в языках программирования осуществляется с помощью подпрограмм. В Python различают два вида подпрограмм: процедуры и функции.</p>
+<h4>Процедуры</h4>
+<p>Процедура — это подпрограмма, выполняющая некоторые действия; она может иметь произвольное количество входных параметров. Описание процедуры имеет вид:</p> 
+<pre>
+    <code>
+        def  &lt;имя процедуры&gt;():
+            &lt;операторы&gt;
+    </code>
+</pre>
+
+<p>Процедура начинается со служебного слова def. После этого записывается имя процедуры, скобки и двоеточие. Операторы, которые входят в тело процедуры, записываются с отступом. Так мы показываем, какие команды входят в процедуру. Для того чтобы процедура заработала, её необходимо вызвать по имени; причём таких вызовов может быть сколько угодно. Процедура должна быть определена к моменту её вызова, т. е. должна быть выполнена команда def, которая создаёт объект-процедуру в памяти. Если процедура вызывается из основной программы, то нужно поместить определение процедуры раньше точки её вызова.</p>
+<p>Предположим, что требуется вывести четыре строки, состоящие из семи, восьми, девяти и десяти единиц соответственно.</p>
+<p>Для этого создадим процедуру с параметром, определяющим длину строки. Чтобы вывести единицу п раз воспользуемся командой: print('1' * n) Чтобы использовать эту команду в процедуре, укажем в скобках переменную (параметр), значение которой и будет определять длину строки.</p>
+<pre>
+    <code>
+        def digit(n): 
+            print ('1' * n)
+    </code>
+</pre>
+<p>Чтобы вывести строку требуемой длины, нужно вызвать процедуру, указав в скобках значение параметра n, т. е. количество символов ' 1':</p>
+<pre>
+    <code>
+        def digit (n) :
+            print ('1' * n) 
+        
+        digit(7)  # выводит 7 единиц: 1111111 
+        digit(8)  # выводит 8 единиц: 11111111 
+        digit(9)  # выводит 9 единиц: 111111111 
+        digit(lO) # выводит 10 единиц: 1111111111
+    </code>
+</pre>
+ 
+<p>Процедура может зависеть от нескольких параметров. Давайте немного улучшим процедуру digit (): сделаем так, чтобы можно было изменять не только длину строки, но и цифры, из которых она строится. Для этого добавим в процедуру ещё один параметр, который назовём d:</p>
+<pre>
+    <code>
+        def digit(d, n): 
+            print(d * n)
+    </code>
+</pre>
+<p>Обозначение переменных, значения которых мы вводим с клавиатуры, не обязательно должно совпадать с обозначением параметров процедуры. Мы могли бы назвать их любыми другими именами, например:</p>
+<pre>
+    <code>
+        def digit(d, n) : 
+            print(d * n) 
+        
+        x=(input('Введите цифру: '))
+        y=int(input('Введите длину строки:'))
+        digit(x, y)
+    </code>
+</pre>
+<p>Переменные d и n — это локальные переменные; они определены и используются только внутри процедуры digit (). Обращаться к ним вне этой процедуры нельзя. Как только работа процедуры будет закончена, все её локальные переменные удалятся из памяти. В тех случаях, когда значение переменной, полученное в подпрограмме, должно быть использовано в основной программе, эту переменную следует объявить как глобальную.</p>
+
+<h4>Функции</h4>
+<p>Функция — это подпрограмма, имеющая единственный результат, записываемый в ячейку памяти. В отличие от процедуры, функция не только выполняет какие-то команды, но и возвращает результат в виде числа, символьной строки или др. Описание функции имеет вид:</p> 
+<pre>
+    <code>
+        def &lt;имя функции&gt;(): 
+            &lt;операторы&gt;
+            return &lt;результат&gt;
+    </code>
+</pre>
+<p>Функция начинается со служебного слова def. После этого записывается имя функции, скобки и двоеточие. Операторы, которые входят в тело функции, записываются с отступом. После оператора return записывается результат, который возвращает функция. В языке Python есть встроенная функция max () , вычисляющая максимальное значение из нескольких аргументов.</p>
+<p>Результат функции можно сразу вывести на экран: print(max(6, 8)) Также мы можем присвоить результат работы функции любой глобальной переменной: x = max (6, 8). Одна функция может вызывать другую.</p>
+
 
 {% if not session.get("role") %}
     <p>Ничего не отображается</p>    
