minor utf symbol fixes

--- a/templates/course4.html
+++ b/templates/course4.html
@@ -10,7 +10,7 @@
     <li>простые — записанные с помощью операций отношения (, &gt;=, &lt;=, != (не равно), == (равно));</li>
     <li>составные — записанные с помощью логических операций (and, or, not).</li>
 </ul>
-<p>В языке Python разрешены двойные неравенства, например А &lt; В &lt; С.</p>
+<p>В языке Python разрешены двойные неравенства, например A &lt; B &lt; C.</p>
 
 <h4>Многообразие способов записи ветвлений</h4>
 <p>Внутри условного оператора могут находиться любые операторы, в том числе и другие условные операторы. Условные
