added course 1 test

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="initial-scale=1, width=device-width">
   <title>Начала программирования на языке Python</title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/test.css">
   <script src="/static/js/jquery-3.7.1.min.js"></script>
   <!-- Использован Bootstrap 4.6, потому что в пятом некоторые функции не заработали -->
   <script src="/static/js/bootstrap.bundle.min.js"></script>
