--- a/templates/course1.html
+++ b/templates/course1.html
@@ -198,11 +198,151 @@
     </tbody>
 </table>
 
-{% if not session.get("role") %} <p>Ничего не отображается</p>
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
 {% elif session.get("role") == 'Учащийся' %}
-<p>Здесь отображается только часть для учащегося</p>
+<form id="quiz" action="/course1" method="POST">
+    <div>
+        <p>1. По сокращённой записи восстановите полную запись оператора присваивания. C /= a + b * 2</p>
+        <div class="btn-group">
+            <input type="radio" class="btn-check" name="q1" id="q1_1" autocomplete="off" value="1" />
+            <label class="btn" for="q1_1" data-mdb-ripple-init>C = C/a + b * 2</label>
+
+            <input type="radio" class="btn-check" name="q1" id="q1_2" autocomplete="off" value="2" />
+            <label class="btn" for="q1_2" data-mdb-ripple-init>C = C/(a + b) * 2</label>
+
+            <input type="radio" class="btn-check" name="q1" id="q1_3" autocomplete="off" value="3" />
+            <label class="btn" for="q1_3" data-mdb-ripple-init>C = C/(a + b * 2)</label>
+
+            <input type="radio" class="btn-check" name="q1" id="q1_4" autocomplete="off" value="4" />
+            <label class="btn" for="q1_4" data-mdb-ripple-init>C/a + b = 2</label>
+        </div>
+
+        <p>2. Какое значение будет присвоено переменной c в результате выполнения программы?</p>
+        <pre>
+            <code>
+                a = b = 5
+                a += b
+                c = 2 * a - b
+            </code>
+        </pre>
+        <div class="btn-group">
+            <input type="radio" class="btn-check" name="q2" id="q2_1" autocomplete="off" value="1" />
+            <label class="btn" for="q2_1" data-mdb-ripple-init>5</label>
+
+            <input type="radio" class="btn-check" name="q2" id="q2_2" autocomplete="off" value="2" />
+            <label class="btn" for="q2_2" data-mdb-ripple-init>10</label>
+
+            <input type="radio" class="btn-check" name="q2" id="q2_3" autocomplete="off" value="3" />
+            <label class="btn" for="q2_3" data-mdb-ripple-init>15</label>
+
+            <input type="radio" class="btn-check" name="q2" id="q2_4" autocomplete="off" value="4" />
+            <label class="btn" for="q2_4" data-mdb-ripple-init>20</label>
+        </div>
+
+        <p>3. Какое значение будет присвоено переменной c в результате выполнения программы?</p>
+        <pre>
+            <code>
+                a = 3
+                b = 4 
+                s = a * b * d 
+                print(s)
+            </code>
+        </pre>
+        <div class="btn-group">
+            <input type="radio" class="btn-check" name="q3" id="q3_1" autocomplete="off" value="1" />
+            <label class="btn" for="q3_1" data-mdb-ripple-init>Перменная d не число</label>
+
+            <input type="radio" class="btn-check" name="q3" id="q3_2" autocomplete="off" value="2" />
+            <label class="btn" for="q3_2" data-mdb-ripple-init>Переменная d не определена</label>
+
+            <input type="radio" class="btn-check" name="q3" id="q3_3" autocomplete="off" value="3" />
+            <label class="btn" for="q3_3" data-mdb-ripple-init>Переменная s не определена</label>
+
+            <input type="radio" class="btn-check" name="q3" id="q3_4" autocomplete="off" value="4" />
+            <label class="btn" for="q3_4" data-mdb-ripple-init>Переменная s не число</label>
+        </div>
+
+        <p>4. В чём разница между числами 100 и 100.0 в языке Python?</p>
+        <div class="btn-group">
+            <input type="radio" class="btn-check" name="q4" id="q4_1" autocomplete="off" value="1" />
+            <label class="btn" for="q4_1" data-mdb-ripple-init>Типы данных int и float</label>
+
+            <input type="radio" class="btn-check" name="q4" id="q4_2" autocomplete="off" value="2" />
+            <label class="btn" for="q4_2" data-mdb-ripple-init>Между числами нет разницы</label>
+
+            <input type="radio" class="btn-check" name="q4" id="q4_3" autocomplete="off" value="3" />
+            <label class="btn" for="q4_3" data-mdb-ripple-init>Типы данных int и string</label>
+
+            <input type="radio" class="btn-check" name="q4" id="q4_4" autocomplete="off" value="4" />
+            <label class="btn" for="q4_4" data-mdb-ripple-init>Числа с плавающей запятой пишутся через ","</label>
+        </div>
+
+        <p>5. Что входит в состав алфавита языка Python? </p>
+        <div class="btn-group">
+            <input type="radio" class="btn-check" name="q5" id="q5_1" autocomplete="off" value="1" />
+            <label class="btn" for="q5_1" data-mdb-ripple-init>Кириллические символы</label>
+
+            <input type="radio" class="btn-check" name="q5" id="q5_2" autocomplete="off" value="2" />
+            <label class="btn" for="q5_2" data-mdb-ripple-init>Римские цифры</label>
+
+            <input type="radio" class="btn-check" name="q5" id="q5_3" autocomplete="off" value="3" />
+            <label class="btn" for="q5_3" data-mdb-ripple-init>Арабские цифры</label>
+
+            <input type="radio" class="btn-check" name="q5" id="q5_4" autocomplete="off" value="4" />
+            <label class="btn" for="q5_4" data-mdb-ripple-init>Все utf символы</label>
+        </div>
+        <input type="submit" value="Проверить ответы" id="checkAnswers" class="btn btn-primary">
+    </div>
+</form>
 {% else %}
 <p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
+<script>
+    document.getElementById('quiz').addEventListener('submit', function (event) {
+        event.preventDefault(); // Предотвращаем отправку формы
+        const q1Answer = document.querySelector('input[name="q1"]:checked');
+        const q2Answer = document.querySelector('input[name="q2"]:checked');
+        const q3Answer = document.querySelector('input[name="q3"]:checked');
+        const q4Answer = document.querySelector('input[name="q4"]:checked');
+        const q5Answer = document.querySelector('input[name="q5"]:checked');
+        // Проверяем, есть ли ответы на все вопросы
+        if (!q1Answer || !q2Answer || !q3Answer || !q4Answer || !q5Answer) {
+            alert('Вы не ответили на все вопросы');
+            return; // Прекращаем выполнение функции, если не все вопросы отвечены
+        }
 
+        // Если ответы на все вопросы даны, продолжаем с проверкой результатов
+        const answers = [
+            q1Answer.value,
+            q2Answer.value,
+            q3Answer.value,
+            q4Answer.value,
+            q5Answer.value
+        ];
+
+        // Задаем правильные ответы
+        const correctAnswers = ['3', '3', '2', '1', '3'];
+
+        // Подсчитываем количество правильных ответов
+        let score = 0;
+        for (let i = 0; i < answers.length; i++) {
+            if (answers[i] === correctAnswers[i]) {
+                score++;
+            } else {
+                // Проверяем каждый ответ и устанавливаем красный цвет для неверных ответов
+                for (let i = 0; i < answers.length; i++) {
+                    const selectedAnswer = document.querySelector(`input[name="q${i + 1}"][value="${answers[i]}"]`);
+                    if (selectedAnswer) {
+                        const labelForAnswer = document.querySelector(`label[for="${selectedAnswer.id}"]`);
+                        if (labelForAnswer && (answers[i] !== correctAnswers[i])) {
+                            labelForAnswer.classList.add('btn-red');
+                        } else {
+                            labelForAnswer.classList.add('btn-green');
+                        }
+                    }
+                }
+            }
+        }
+    })
+</script>
 {% endblock %}
